syntax = "proto3";

option csharp_namespace = "GrpcService2";

package AnotherGreet;

// The greeting service definition.
service AnotherGreeter	 {
  // Sends a greeting
  rpc AnotherSayHello (AnotherHelloRequest) returns (AnotherHelloReply);
}

// The request message containing the user's name.
message AnotherHelloRequest {
	string userId = 10;
  string name = 1;
}

// The response message containing the greetings.
message AnotherHelloReply {
	string userId = 10;
  string message = 1;
}
